--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,3 +6,4 @@ $global-font: "Newsreader", -apple-system, BlinkMacSystemFont, "Segoe UI",
 
 /* =========== colors =========== */
 $gray-3: #d1d5db;
+$orange-5: #f97316;
